2009-07-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c:
	Change all calls to gst_element_get_pad() to gst_element_get_static_pad()
	
	gst_element_get_pad() is deprecated for some reasons (see the docs)
	and all places where it was used should use get_static_pad() anyway.

2009-06-30  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_step):
	* src/backend/bacon-video-widget.h:
	* src/totem-object.c (totem_action_handle_key_press):
	Add frame-by-frame stepping, requires gstreamer 0.10.24,
	and a newer gst-plugins-base (Closes: #151909)

2009-06-30  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/lirc/totem_lirc_default: Small tweaks for the
	default LIRC setup

2009-06-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem-object.c (totem_action_handle_key_press):
	When there's a DVD menu showing, use the arrow keys to
	navigate around, and the Enter key to select (Closes: #580351)

2009-06-14  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/totem-youtube.c (set_up_tree_view),
	(resolve_t_param_cb), (starting_video_cb):
	* src/plugins/youtube/youtube.ui:
	* src/totem-cell-renderer-video.c (get_size),
	(totem_cell_renderer_video_get_size),
	(totem_cell_renderer_video_render):
	* src/totem-video-list.c (totem_video_list_class_init),
	(row_activated_cb), (show_popup_menu):
	* src/totemvideolist-marshal.list: Fix video list rendering for the
	YouTube plugin, as well as playback of related videos.

2009-06-14  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/totem-youtube.c (resolve_t_param_cb),
	(resolve_t_param), (query_progress_cb),
	(open_in_web_browser_activate_cb): Update YouTube plugin to use
	libgdata 0.4.0 API. (Closes: #584691)

2009-06-12  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.ui: Fix an errant ID. (Closes: #585518)

2009-06-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
