@@ -1,3 +1,8 @@
+2009-07-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
+
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	Save some memory allocations and use GSlice instead of normal allocations.
+
 2009-07-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
